--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -510,17 +510,17 @@ header {
 	pointer-events: none;
 	overflow: hidden;
 	border-radius: 24px;
-	&:after {
-		background: radial-gradient(circle, rgba(170 96 255) 0%, transparent 40%);
-		content: "";
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		min-height: 190px;
-		top: 0;
-		left: 50%;
-		transform: translate(-50%, -50%);
-	}
+	// &:after {
+	// 	background: radial-gradient(circle, rgba(170 96 255) 0%, transparent 40%);
+	// 	content: "";
+	// 	position: absolute;
+	// 	width: 100%;
+	// 	height: 100%;
+	// 	min-height: 190px;
+	// 	top: 0;
+	// 	left: 50%;
+	// 	transform: translate(-50%, -50%);
+	// }
 }
 
 .banner__content {
