--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1538,6 +1538,12 @@ footer {
 		width: 100%;
 		padding: 10px 40px 20px;
 	}
+	.banner__content__dots span:nth-child(1) {
+		background: rgb(255, 107, 0);
+	}
+	.banner__content__dots span {
+		background: rgba(255, 255, 255, 1);
+	}
 	.banner__content p:nth-child(3) {
 		font-size: 14px;
 		background: none;
