--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -403,6 +403,17 @@ header.active .header__btn:last-child {
   display: block;
 }
 
+.banner__content__gr {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  overflow: hidden;
+  border-radius: 24px;
+}
+
 .banner__content {
   z-index: 1;
   position: relative;
@@ -417,6 +428,19 @@ header.active .header__btn:last-child {
   border-radius: 24px;
   box-shadow: 0 4px rgb(7, 1, 181), 0 3px 8px 1px rgb(0, 0, 0);
 }
+.banner__content:before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  content: "";
+  border: 1px solid transparent;
+  background-color: transparent;
+  background-image: linear-gradient(rgb(109, 38, 237), rgb(88, 23, 203)), linear-gradient(248.61deg, rgba(198, 189, 255, 0.5) 20.91%, rgba(198, 189, 255, 0) 37.5%, rgba(198, 189, 255, 0) 57.43%, rgba(198, 189, 255, 0) 69.05%, rgb(198, 189, 255) 93.33%), linear-gradient(rgb(109, 38, 237), rgb(88, 23, 203));
+  background-clip: padding-box, border-box, border-box;
+  background-origin: padding-box, border-box, border-box;
+  border-radius: 24px;
+}
 .banner__content p {
   position: relative;
   z-index: 3;
@@ -425,7 +449,13 @@ header.active .header__btn:last-child {
   font-size: 16px;
   line-height: 1.2;
   font-weight: 700;
-  color: rgb(255, 255, 255);
+  background-image: linear-gradient(rgb(255, 255, 255), rgb(198, 189, 255));
+  -webkit-background-clip: text;
+          background-clip: text;
+  filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.5));
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 0;
+  -webkit-text-stroke-color: rgb(82, 0, 202);
 }
 .banner__content p:nth-child(4) {
   margin-top: 8px;
@@ -434,7 +464,13 @@ header.active .header__btn:last-child {
   font-size: 38px;
   line-height: 1;
   font-family: "GrilledCheese BTN", sans-serif;
-  color: rgb(255, 229, 0);
+  filter: drop-shadow(0 3px 0 rgb(59, 0, 148)) drop-shadow(0 4px 5px rgba(77, 1, 181, 0.4));
+  background: linear-gradient(183deg, rgb(255, 229, 0) 36.33%, rgb(255, 107, 0) 97.19%);
+  -webkit-background-clip: text;
+          background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-repeat: repeat-y;
+  background-size: 100% 43.2px;
 }
 .banner__content p:nth-child(5) {
   margin-top: 20px;
@@ -456,6 +492,20 @@ header.active .header__btn:last-child {
   isolation: isolate;
   position: relative;
   background: radial-gradient(54.8% 49.01% at 49.68% 103.13%, rgba(213, 255, 43, 0.7) 0%, rgba(122, 255, 89, 0.7) 17.5%, rgba(122, 255, 89, 0) 100%), linear-gradient(180deg, rgb(62, 225, 5) 0%, rgb(5, 156, 7) 100%);
+  text-shadow: -1px -1px 0 rgb(8, 91, 0), -1px -1px 0 rgb(8, 91, 0), -1px 0 0 rgb(8, 91, 0), -1px 1px 0 rgb(8, 91, 0), -1px 1px 0 rgb(8, 91, 0), -1px -1px 0 rgb(8, 91, 0), -1px -1px 0 rgb(8, 91, 0), -1px 0 0 rgb(8, 91, 0), -1px 1px 0 rgb(8, 91, 0), -1px 1px 0 rgb(8, 91, 0), 0 -1px 0 rgb(8, 91, 0), 0 -1px 0 rgb(8, 91, 0), 0 0 0 rgb(8, 91, 0), 0 1px 0 rgb(8, 91, 0), 0 1px 0 rgb(8, 91, 0), 1px -1px 0 rgb(8, 91, 0), 1px -1px 0 rgb(8, 91, 0), 1px 0 0 rgb(8, 91, 0), 1px 1px 0 rgb(8, 91, 0), 1px 1px 0 rgb(8, 91, 0), 1px -1px 0 rgb(8, 91, 0), 1px -1px 0 rgb(8, 91, 0), 1px 0 0 rgb(8, 91, 0), 1px 1px 0 rgb(8, 91, 0), 1px 1px 0 rgb(8, 91, 0), -1px 2px 0 rgb(8, 91, 0), 0 2px 0 rgb(8, 91, 0), 1px 2px 0 rgb(8, 91, 0), 1px 2px 0 rgb(8, 91, 0);
+}
+.banner__content p:nth-child(5):before {
+  position: absolute;
+  inset: 2px 0 4px 0;
+  padding: 1px;
+  background-image: conic-gradient(from 192.75deg at 50% 25.93%, rgba(255, 255, 255, 0.7) -25.41deg, rgb(255, 255, 255) 9.98deg, rgba(255, 255, 255, 0.92) 45.54deg, rgba(255, 255, 255, 0) 59.7deg, rgba(255, 255, 255, 0) 0deg, rgba(255, 255, 255, 0) 300deg, rgba(255, 255, 255, 0.7) 334.59deg, rgb(255, 255, 255) 369.98deg), linear-gradient(3deg, rgba(255, 255, 255, 0) 89.29%, rgb(255, 255, 255) 94.1% 95.33%);
+  -webkit-mask: linear-gradient(rgb(255, 255, 255) 0 0) content-box, linear-gradient(rgb(255, 255, 255) 0 0);
+          mask: linear-gradient(rgb(255, 255, 255) 0 0) content-box, linear-gradient(rgb(255, 255, 255) 0 0);
+  -webkit-mask-composite: xor;
+          mask-composite: exclude;
+  border-radius: 50px;
+  z-index: 1;
+  content: "";
 }
 
 .banner__content__dots {
@@ -471,10 +521,10 @@ header.active .header__btn:last-child {
   width: 8px;
   aspect-ratio: 1/1;
   border-radius: 50%;
-  background: rgb(255, 255, 255);
+  background: radial-gradient(46.12% 39.58% at 50% 96.88%, rgba(255, 255, 255, 0.6) 0%, rgba(255, 255, 255, 0.36) 46.47%, rgba(255, 255, 255, 0) 89.12%), linear-gradient(rgb(227, 223, 237) 22.92%, rgb(205, 199, 221) 100%);
 }
 .banner__content__dots span:nth-child(1) {
-  background: rgb(255, 229, 0);
+  background: linear-gradient(183deg, rgb(255, 229, 0) 36.33%, rgb(255, 107, 0) 97.19%);
 }
 
 .banner__content__arrow {
