--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,6 +66,11 @@ header .container {
   height: 100%;
   max-width: none;
 }
+header.active .header__btn:last-child {
+  color: rgb(242, 255, 191);
+  background: radial-gradient(54.8% 49.01% at 49.68% 103.13%, rgba(213, 255, 43, 0.7) 0%, rgba(122, 255, 89, 0.7) 17.5%, rgba(122, 255, 89, 0) 100%), linear-gradient(180deg, rgb(62, 225, 5) 0%, rgb(5, 156, 7) 100%);
+}
+
 .header {
   display: flex;
   align-items: center;
@@ -102,6 +107,7 @@ header .container {
   cursor: pointer;
   border: 1px solid transparent;
   background: linear-gradient(rgb(109, 38, 237), rgb(88, 23, 203)) padding-box, linear-gradient(248.61deg, rgba(198, 189, 255, 0.5) 20.91%, rgba(198, 189, 255, 0) 37.5%, rgba(198, 189, 255, 0) 57.43%, rgba(198, 189, 255, 0) 69.05%, rgb(198, 189, 255) 93.33%) border-box;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   border-radius: 11px;
 }
 .header__icon svg-icon-sprite {
@@ -153,6 +159,20 @@ header .container {
   box-shadow: 0 5px 9px rgba(0, 0, 0, 0.3);
   background: radial-gradient(71.49% 72.87% at 49.68% 119.13%, rgba(214, 97, 255, 0.5) 0%, rgba(185, 71, 255, 0.5) 29%, rgba(185, 71, 255, 0) 100%), linear-gradient(179.73deg, rgb(88, 23, 203) 0.23%, rgb(82, 0, 202) 99.77%);
   position: relative;
+  text-shadow: -1px -1px 0 rgb(77, 1, 181), -1px -1px 0 rgb(77, 1, 181), -1px 0 0 rgb(77, 1, 181), -1px 1px 0 rgb(77, 1, 181), -1px 1px 0 rgb(77, 1, 181), -1px -1px 0 rgb(77, 1, 181), -1px -1px 0 rgb(77, 1, 181), -1px 0 0 rgb(77, 1, 181), -1px 1px 0 rgb(77, 1, 181), -1px 1px 0 rgb(77, 1, 181), 0 -1px 0 rgb(77, 1, 181), 0 -1px 0 rgb(77, 1, 181), 0 0 0 rgb(77, 1, 181), 0 1px 0 rgb(77, 1, 181), 0 1px 0 rgb(77, 1, 181), 1px -1px 0 rgb(77, 1, 181), 1px -1px 0 rgb(77, 1, 181), 1px 0 0 rgb(77, 1, 181), 1px 1px 0 rgb(77, 1, 181), 1px 1px 0 rgb(77, 1, 181), 1px -1px 0 rgb(77, 1, 181), 1px -1px 0 rgb(77, 1, 181), 1px 0 0 rgb(77, 1, 181), 1px 1px 0 rgb(77, 1, 181), 1px 1px 0 rgb(77, 1, 181), -1px 2px 0 rgb(77, 1, 181), 0 2px 0 rgb(77, 1, 181), 1px 2px 0 rgb(77, 1, 181), 1px 2px 0 rgb(77, 1, 181);
+}
+.header__btn:before {
+  background-image: conic-gradient(from 192.75deg at 50% 25.93%, rgba(255, 255, 255, 0.4) -25.41deg, rgba(255, 255, 255, 0.7) 9.98deg, rgba(255, 255, 255, 0.62) 45.54deg, rgba(255, 255, 255, 0) 59.7deg, rgba(255, 255, 255, 0) 177.49deg, rgba(255, 255, 255, 0) 295.25deg, rgba(255, 255, 255, 0.4) 334.59deg, rgba(255, 255, 255, 0.7) 369.98deg), linear-gradient(3deg, rgba(255, 255, 255, 0) 89.29%, rgba(255, 255, 255, 0.7) 94.1% 95.33%);
+  position: absolute;
+  inset: 2px 0 3px 0;
+  padding: 1px;
+  -webkit-mask: linear-gradient(rgb(255, 255, 255) 0 0) content-box, linear-gradient(rgb(255, 255, 255) 0 0);
+          mask: linear-gradient(rgb(255, 255, 255) 0 0) content-box, linear-gradient(rgb(255, 255, 255) 0 0);
+  -webkit-mask-composite: xor;
+          mask-composite: exclude;
+  border-radius: 50px;
+  z-index: 1;
+  content: "";
 }
 
 .sidebar {
@@ -393,6 +413,17 @@ header .container {
   overflow: hidden;
   border-radius: 24px;
 }
+.banner__content__gr:after {
+  background: radial-gradient(circle, rgb(170, 96, 255) 0%, transparent 40%);
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  min-height: 190px;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 .banner__content {
   z-index: 1;
@@ -405,6 +436,20 @@ header .container {
   width: 480px;
   background-color: rgb(109, 38, 237);
   padding: 32px;
+  border-radius: 24px;
+  box-shadow: 0 4px rgb(7, 1, 181), 0 3px 8px 1px rgb(0, 0, 0);
+}
+.banner__content:before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  content: "";
+  border: 1px solid transparent;
+  background-color: transparent;
+  background-image: linear-gradient(rgb(109, 38, 237), rgb(88, 23, 203)), linear-gradient(248.61deg, rgba(198, 189, 255, 0.5) 20.91%, rgba(198, 189, 255, 0) 37.5%, rgba(198, 189, 255, 0) 57.43%, rgba(198, 189, 255, 0) 69.05%, rgb(198, 189, 255) 93.33%), linear-gradient(rgb(109, 38, 237), rgb(88, 23, 203));
+  background-clip: padding-box, border-box, border-box;
+  background-origin: padding-box, border-box, border-box;
   border-radius: 24px;
 }
 .banner__content p {
@@ -458,6 +503,20 @@ header .container {
   isolation: isolate;
   position: relative;
   background: radial-gradient(54.8% 49.01% at 49.68% 103.13%, rgba(213, 255, 43, 0.7) 0%, rgba(122, 255, 89, 0.7) 17.5%, rgba(122, 255, 89, 0) 100%), linear-gradient(180deg, rgb(62, 225, 5) 0%, rgb(5, 156, 7) 100%);
+  text-shadow: -1px -1px 0 rgb(8, 91, 0), -1px -1px 0 rgb(8, 91, 0), -1px 0 0 rgb(8, 91, 0), -1px 1px 0 rgb(8, 91, 0), -1px 1px 0 rgb(8, 91, 0), -1px -1px 0 rgb(8, 91, 0), -1px -1px 0 rgb(8, 91, 0), -1px 0 0 rgb(8, 91, 0), -1px 1px 0 rgb(8, 91, 0), -1px 1px 0 rgb(8, 91, 0), 0 -1px 0 rgb(8, 91, 0), 0 -1px 0 rgb(8, 91, 0), 0 0 0 rgb(8, 91, 0), 0 1px 0 rgb(8, 91, 0), 0 1px 0 rgb(8, 91, 0), 1px -1px 0 rgb(8, 91, 0), 1px -1px 0 rgb(8, 91, 0), 1px 0 0 rgb(8, 91, 0), 1px 1px 0 rgb(8, 91, 0), 1px 1px 0 rgb(8, 91, 0), 1px -1px 0 rgb(8, 91, 0), 1px -1px 0 rgb(8, 91, 0), 1px 0 0 rgb(8, 91, 0), 1px 1px 0 rgb(8, 91, 0), 1px 1px 0 rgb(8, 91, 0), -1px 2px 0 rgb(8, 91, 0), 0 2px 0 rgb(8, 91, 0), 1px 2px 0 rgb(8, 91, 0), 1px 2px 0 rgb(8, 91, 0);
+}
+.banner__content p:nth-child(5):before {
+  position: absolute;
+  inset: 2px 0 4px 0;
+  padding: 1px;
+  background-image: conic-gradient(from 192.75deg at 50% 25.93%, rgba(255, 255, 255, 0.7) -25.41deg, rgb(255, 255, 255) 9.98deg, rgba(255, 255, 255, 0.92) 45.54deg, rgba(255, 255, 255, 0) 59.7deg, rgba(255, 255, 255, 0) 0deg, rgba(255, 255, 255, 0) 300deg, rgba(255, 255, 255, 0.7) 334.59deg, rgb(255, 255, 255) 369.98deg), linear-gradient(3deg, rgba(255, 255, 255, 0) 89.29%, rgb(255, 255, 255) 94.1% 95.33%);
+  -webkit-mask: linear-gradient(rgb(255, 255, 255) 0 0) content-box, linear-gradient(rgb(255, 255, 255) 0 0);
+          mask: linear-gradient(rgb(255, 255, 255) 0 0) content-box, linear-gradient(rgb(255, 255, 255) 0 0);
+  -webkit-mask-composite: xor;
+          mask-composite: exclude;
+  border-radius: 50px;
+  z-index: 1;
+  content: "";
 }
 
 .banner__content__dots {
@@ -891,6 +950,7 @@ footer:before {
   border-radius: 50px;
   border: 1px solid rgb(169, 155, 255);
   background-color: rgb(235, 231, 248);
+  box-shadow: 0 3px 0 0 rgb(169, 155, 255);
   font-weight: 700;
   color: rgb(82, 0, 202);
 }
