--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -70,14 +70,14 @@ header {
 	&.active {
 		.header__btn {
 			&:last-child {
-				// color: rgb(242 255 191);
-				// background: radial-gradient(
-				// 		54.8% 49.01% at 49.68% 103.13%,
-				// 		rgb(213 255 43 / 0.7) 0%,
-				// 		rgb(122 255 89 / 0.7) 17.5%,
-				// 		rgb(122 255 89 / 0) 100%
-				// 	),
-				// 	linear-gradient(180deg, rgb(62 225 5) 0%, rgb(5 156 7) 100%);
+				color: rgb(242 255 191);
+				background: radial-gradient(
+						54.8% 49.01% at 49.68% 103.13%,
+						rgb(213 255 43 / 0.7) 0%,
+						rgb(122 255 89 / 0.7) 17.5%,
+						rgb(122 255 89 / 0) 100%
+					),
+					linear-gradient(180deg, rgb(62 225 5) 0%, rgb(5 156 7) 100%);
 			}
 		}
 	}
@@ -128,7 +128,7 @@ header {
 				rgb(198 189 255) 93.33%
 			)
 			border-box;
-	//box-shadow: 0 1px 2px rgb(0 0 0 / 0.2);
+	box-shadow: 0 1px 2px rgb(0 0 0 / 0.2);
 	border-radius: 11px;
 	svg-icon-sprite {
 		width: 26px;
@@ -192,43 +192,43 @@ header {
 		),
 		linear-gradient(179.73deg, rgb(88 23 203) 0.23%, rgb(82 0 202) 99.77%);
 	position: relative;
-	// text-shadow: -1px -1px 0 rgb(77 1 181), -1px -1px 0 rgb(77 1 181),
-	// 	-1px 0 0 rgb(77 1 181), -1px 1px 0 rgb(77 1 181), -1px 1px 0 rgb(77 1 181),
-	// 	-1px -1px 0 rgb(77 1 181), -1px -1px 0 rgb(77 1 181), -1px 0 0 rgb(77 1 181),
-	// 	-1px 1px 0 rgb(77 1 181), -1px 1px 0 rgb(77 1 181), 0 -1px 0 rgb(77 1 181),
-	// 	0 -1px 0 rgb(77 1 181), 0 0 0 rgb(77 1 181), 0 1px 0 rgb(77 1 181),
-	// 	0 1px 0 rgb(77 1 181), 1px -1px 0 rgb(77 1 181), 1px -1px 0 rgb(77 1 181),
-	// 	1px 0 0 rgb(77 1 181), 1px 1px 0 rgb(77 1 181), 1px 1px 0 rgb(77 1 181),
-	// 	1px -1px 0 rgb(77 1 181), 1px -1px 0 rgb(77 1 181), 1px 0 0 rgb(77 1 181),
-	// 	1px 1px 0 rgb(77 1 181), 1px 1px 0 rgb(77 1 181), -1px 2px 0 rgb(77 1 181),
-	// 	0 2px 0 rgb(77 1 181), 1px 2px 0 rgb(77 1 181), 1px 2px 0 rgb(77 1 181);
-	// &:before {
-	// 	background-image: conic-gradient(
-	// 			from 192.75deg at 50% 25.93%,
-	// 			rgb(255 255 255 / 0.4) -25.41deg,
-	// 			rgb(255 255 255 / 0.7) 9.98deg,
-	// 			rgb(255 255 255 / 0.62) 45.54deg,
-	// 			rgb(255 255 255 / 0) 59.7deg,
-	// 			rgb(255 255 255 / 0) 177.49deg,
-	// 			rgb(255 255 255 / 0) 295.25deg,
-	// 			rgb(255 255 255 / 0.4) 334.59deg,
-	// 			rgb(255 255 255 / 0.7) 369.98deg
-	// 		),
-	// 		linear-gradient(
-	// 			3deg,
-	// 			rgb(255 255 255 / 0) 89.29%,
-	// 			rgb(255 255 255 / 0.7) 94.1% 95.33%
-	// 		);
-	// 	position: absolute;
-	// 	inset: 2px 0 3px 0;
-	// 	padding: 1px;
-	// 	mask: linear-gradient(rgb(255 255 255) 0 0) content-box,
-	// 		linear-gradient(rgb(255 255 255) 0 0);
-	// 	mask-composite: exclude;
-	// 	border-radius: 50px;
-	// 	z-index: 1;
-	// 	content: "";
-	// }
+	text-shadow: -1px -1px 0 rgb(77 1 181), -1px -1px 0 rgb(77 1 181),
+		-1px 0 0 rgb(77 1 181), -1px 1px 0 rgb(77 1 181), -1px 1px 0 rgb(77 1 181),
+		-1px -1px 0 rgb(77 1 181), -1px -1px 0 rgb(77 1 181), -1px 0 0 rgb(77 1 181),
+		-1px 1px 0 rgb(77 1 181), -1px 1px 0 rgb(77 1 181), 0 -1px 0 rgb(77 1 181),
+		0 -1px 0 rgb(77 1 181), 0 0 0 rgb(77 1 181), 0 1px 0 rgb(77 1 181),
+		0 1px 0 rgb(77 1 181), 1px -1px 0 rgb(77 1 181), 1px -1px 0 rgb(77 1 181),
+		1px 0 0 rgb(77 1 181), 1px 1px 0 rgb(77 1 181), 1px 1px 0 rgb(77 1 181),
+		1px -1px 0 rgb(77 1 181), 1px -1px 0 rgb(77 1 181), 1px 0 0 rgb(77 1 181),
+		1px 1px 0 rgb(77 1 181), 1px 1px 0 rgb(77 1 181), -1px 2px 0 rgb(77 1 181),
+		0 2px 0 rgb(77 1 181), 1px 2px 0 rgb(77 1 181), 1px 2px 0 rgb(77 1 181);
+	&:before {
+		background-image: conic-gradient(
+				from 192.75deg at 50% 25.93%,
+				rgb(255 255 255 / 0.4) -25.41deg,
+				rgb(255 255 255 / 0.7) 9.98deg,
+				rgb(255 255 255 / 0.62) 45.54deg,
+				rgb(255 255 255 / 0) 59.7deg,
+				rgb(255 255 255 / 0) 177.49deg,
+				rgb(255 255 255 / 0) 295.25deg,
+				rgb(255 255 255 / 0.4) 334.59deg,
+				rgb(255 255 255 / 0.7) 369.98deg
+			),
+			linear-gradient(
+				3deg,
+				rgb(255 255 255 / 0) 89.29%,
+				rgb(255 255 255 / 0.7) 94.1% 95.33%
+			);
+		position: absolute;
+		inset: 2px 0 3px 0;
+		padding: 1px;
+		mask: linear-gradient(rgb(255 255 255) 0 0) content-box,
+			linear-gradient(rgb(255 255 255) 0 0);
+		mask-composite: exclude;
+		border-radius: 50px;
+		z-index: 1;
+		content: "";
+	}
 }
 
 .sidebar {
@@ -510,17 +510,17 @@ header {
 	pointer-events: none;
 	overflow: hidden;
 	border-radius: 24px;
-	// &:after {
-	// 	background: radial-gradient(circle, rgba(170 96 255) 0%, transparent 40%);
-	// 	content: "";
-	// 	position: absolute;
-	// 	width: 100%;
-	// 	height: 100%;
-	// 	min-height: 190px;
-	// 	top: 0;
-	// 	left: 50%;
-	// 	transform: translate(-50%, -50%);
-	// }
+	&:after {
+		background: radial-gradient(circle, rgba(170 96 255) 0%, transparent 40%);
+		content: "";
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		min-height: 190px;
+		top: 0;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
 }
 
 .banner__content {
@@ -535,30 +535,30 @@ header {
 	background-color: rgb(109 38 237);
 	padding: 32px;
 	border-radius: 24px;
-	//	box-shadow: 0 4px rgb(7 1 181), 0 3px 8px 1px rgb(0 0 0);
+	box-shadow: 0 4px rgb(7 1 181), 0 3px 8px 1px rgb(0 0 0);
 
-	// &:before {
-	// 	position: absolute;
-	// 	width: 100%;
-	// 	height: 100%;
-	// 	top: 0;
-	// 	content: "";
-	// 	border: 1px solid transparent;
-	// 	background-color: transparent;
-	// 	background-image: linear-gradient(rgb(109 38 237), rgb(88 23 203)),
-	// 		linear-gradient(
-	// 			248.61deg,
-	// 			rgb(198 189 255 / 0.5) 20.91%,
-	// 			rgb(198 189 255 / 0) 37.5%,
-	// 			rgb(198 189 255 / 0) 57.43%,
-	// 			rgb(198 189 255 / 0) 69.05%,
-	// 			rgb(198 189 255) 93.33%
-	// 		),
-	// 		linear-gradient(rgb(109 38 237), rgb(88 23 203));
-	// 	background-clip: padding-box, border-box, border-box;
-	// 	background-origin: padding-box, border-box, border-box;
-	// 	border-radius: 24px;
-	// }
+	&:before {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		content: "";
+		border: 1px solid transparent;
+		background-color: transparent;
+		background-image: linear-gradient(rgb(109 38 237), rgb(88 23 203)),
+			linear-gradient(
+				248.61deg,
+				rgb(198 189 255 / 0.5) 20.91%,
+				rgb(198 189 255 / 0) 37.5%,
+				rgb(198 189 255 / 0) 57.43%,
+				rgb(198 189 255 / 0) 69.05%,
+				rgb(198 189 255) 93.33%
+			),
+			linear-gradient(rgb(109 38 237), rgb(88 23 203));
+		background-clip: padding-box, border-box, border-box;
+		background-origin: padding-box, border-box, border-box;
+		border-radius: 24px;
+	}
 
 	p {
 		position: relative;
@@ -617,44 +617,44 @@ header {
 					rgb(122 255 89 / 0) 100%
 				),
 				linear-gradient(180deg, rgb(62 225 5) 0%, rgb(5 156 7) 100%);
-			// text-shadow: -1px -1px 0 rgb(8 91 0), -1px -1px 0 rgb(8 91 0),
-			// 	-1px 0 0 rgb(8 91 0), -1px 1px 0 rgb(8 91 0), -1px 1px 0 rgb(8 91 0),
-			// 	-1px -1px 0 rgb(8 91 0), -1px -1px 0 rgb(8 91 0), -1px 0 0 rgb(8 91 0),
-			// 	-1px 1px 0 rgb(8 91 0), -1px 1px 0 rgb(8 91 0), 0 -1px 0 rgb(8 91 0),
-			// 	0 -1px 0 rgb(8 91 0), 0 0 0 rgb(8 91 0), 0 1px 0 rgb(8 91 0),
-			// 	0 1px 0 rgb(8 91 0), 1px -1px 0 rgb(8 91 0), 1px -1px 0 rgb(8 91 0),
-			// 	1px 0 0 rgb(8 91 0), 1px 1px 0 rgb(8 91 0), 1px 1px 0 rgb(8 91 0),
-			// 	1px -1px 0 rgb(8 91 0), 1px -1px 0 rgb(8 91 0), 1px 0 0 rgb(8 91 0),
-			// 	1px 1px 0 rgb(8 91 0), 1px 1px 0 rgb(8 91 0), -1px 2px 0 rgb(8 91 0),
-			// 	0 2px 0 rgb(8 91 0), 1px 2px 0 rgb(8 91 0), 1px 2px 0 rgb(8 91 0);
+			text-shadow: -1px -1px 0 rgb(8 91 0), -1px -1px 0 rgb(8 91 0),
+				-1px 0 0 rgb(8 91 0), -1px 1px 0 rgb(8 91 0), -1px 1px 0 rgb(8 91 0),
+				-1px -1px 0 rgb(8 91 0), -1px -1px 0 rgb(8 91 0), -1px 0 0 rgb(8 91 0),
+				-1px 1px 0 rgb(8 91 0), -1px 1px 0 rgb(8 91 0), 0 -1px 0 rgb(8 91 0),
+				0 -1px 0 rgb(8 91 0), 0 0 0 rgb(8 91 0), 0 1px 0 rgb(8 91 0),
+				0 1px 0 rgb(8 91 0), 1px -1px 0 rgb(8 91 0), 1px -1px 0 rgb(8 91 0),
+				1px 0 0 rgb(8 91 0), 1px 1px 0 rgb(8 91 0), 1px 1px 0 rgb(8 91 0),
+				1px -1px 0 rgb(8 91 0), 1px -1px 0 rgb(8 91 0), 1px 0 0 rgb(8 91 0),
+				1px 1px 0 rgb(8 91 0), 1px 1px 0 rgb(8 91 0), -1px 2px 0 rgb(8 91 0),
+				0 2px 0 rgb(8 91 0), 1px 2px 0 rgb(8 91 0), 1px 2px 0 rgb(8 91 0);
 
-			// &:before {
-			// 	position: absolute;
-			// 	inset: 2px 0 4px 0;
-			// 	padding: 1px;
-			// 	background-image: conic-gradient(
-			// 			from 192.75deg at 50% 25.93%,
-			// 			rgb(255 255 255 / 0.7) -25.41deg,
-			// 			rgb(255 255 255 / 1) 9.98deg,
-			// 			rgb(255 255 255 / 0.92) 45.54deg,
-			// 			rgb(255 255 255 / 0) 59.7deg,
-			// 			rgb(255 255 255 / 0) 0deg,
-			// 			rgb(255 255 255 / 0) 300deg,
-			// 			rgb(255 255 255 / 0.7) 334.59deg,
-			// 			rgb(255 255 255 / 1) 369.98deg
-			// 		),
-			// 		linear-gradient(
-			// 			3deg,
-			// 			rgb(255 255 255 / 0) 89.29%,
-			// 			rgb(255 255 255 / 1) 94.1% 95.33%
-			// 		);
-			// 	mask: linear-gradient(rgb(255 255 255) 0 0) content-box,
-			// 		linear-gradient(rgb(255 255 255) 0 0);
-			// 	mask-composite: exclude;
-			// 	border-radius: 50px;
-			// 	z-index: 1;
-			// 	content: "";
-			// }
+			&:before {
+				position: absolute;
+				inset: 2px 0 4px 0;
+				padding: 1px;
+				background-image: conic-gradient(
+						from 192.75deg at 50% 25.93%,
+						rgb(255 255 255 / 0.7) -25.41deg,
+						rgb(255 255 255 / 1) 9.98deg,
+						rgb(255 255 255 / 0.92) 45.54deg,
+						rgb(255 255 255 / 0) 59.7deg,
+						rgb(255 255 255 / 0) 0deg,
+						rgb(255 255 255 / 0) 300deg,
+						rgb(255 255 255 / 0.7) 334.59deg,
+						rgb(255 255 255 / 1) 369.98deg
+					),
+					linear-gradient(
+						3deg,
+						rgb(255 255 255 / 0) 89.29%,
+						rgb(255 255 255 / 1) 94.1% 95.33%
+					);
+				mask: linear-gradient(rgb(255 255 255) 0 0) content-box,
+					linear-gradient(rgb(255 255 255) 0 0);
+				mask-composite: exclude;
+				border-radius: 50px;
+				z-index: 1;
+				content: "";
+			}
 		}
 	}
 }
@@ -1154,7 +1154,7 @@ footer {
 		border-radius: 50px;
 		border: 1px solid rgb(169 155 255);
 		background-color: rgb(235 231 248);
-		//box-shadow: 0 3px 0 0 rgb(169 155 255);
+		box-shadow: 0 3px 0 0 rgb(169 155 255);
 		font-weight: 700;
 		color: rgb(82 0 202);
 		svg-icon-sprite {
